--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@paypal/react-paypal-js": "^7.8.2",
+    "@types/dompurify": "^3.0.4",
     "date-fns": "^2.29.3",
     "dayjs": "^1.10.4",
     "next": "12",
