--- a/.github/workflows/on-deploy.yml
+++ b/.github/workflows/on-deploy.yml
@@ -23,6 +23,12 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Install Dependencies
         run: yarn
+      - name: Create env file
+        run: |
+          touch .env
+          echo NEXT_PUBLIC_INSTAGRAM_ACCESS_TOKEN=${{ secrets.NEXT_PUBLIC_INSTAGRAM_ACCESS_TOKEN }} >> .env
+          echo NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=${{ secrets.NEXT_PUBLIC_GOOGLE_MAPS_API_KEY }} >> .env
+          cat .env
       - name: Build
         run: yarn deploy
       - name: Deploy to Firebase
