--- a/.github/workflows/on-deploy.yml
+++ b/.github/workflows/on-deploy.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [18.x]
+        node-version: [16.x]
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
@@ -32,7 +32,7 @@ jobs:
       - name: Build
         run: yarn deploy
       - name: Deploy to Firebase
-        uses: w9jds/firebase-action@master
+        uses: w9jds/firebase-action@v12.9.0
         with:
           args: deploy --only hosting
         env:
