--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@sentry/nextjs": "^7.86.0",
     "date-fns": "^2.29.3",
     "dayjs": "^1.10.4",
-    "next": "12",
+    "next": "^12.3.1",
     "react": "17.0.2",
     "react-day-picker": "^8.4.1",
     "react-dom": "17.0.2",
