--- a/firebase.json
+++ b/firebase.json
@@ -6,7 +6,7 @@
     "cleanUrls": true,
     "rewrites": [
       {
-        "source": "**",
+        "source": "**/",
         "destination": "/404.html",
         "dynamicLinks": true
       }
@@ -191,7 +191,7 @@
           }
         ]
       }
-    ]
-    // "trailingSlash": true
+    ],
+    "trailingSlash": true
   }
 }
